# oxigraph

./: .codespellrc  .gitignore  .gitmodules  .mailmap  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENT10_VERIFICATION_SUMMARY.md  AGENT2_SHACL_VERIFICATION_SUMMARY.md  AGENT_10_COMPLETION_REPORT.md  AGENT_10_EXECUTION_SUMMARY.md  AGENT_1_SPARQL_MATURITY_REPORT.md  AGENT_5_FINAL_REPORT.md  AGENT_5_QUICK_REFERENCE.md  AGENT_5_SUMMARY.txt  AGENT_6_ADVERSARIAL_SECURITY_REPORT.md  AGENT_7_DETERMINISM_REPRODUCIBILITY_REPORT.md  AGENT_7_SUMMARY.md  AGENT_8_FINAL_REPORT.md  AGENT_9_SUMMARY.md  BUILD.md  CHANGELOG.md  CITATION.cff  CI_COMPATIBILITY_REPORT.md  CLAUDE.md  Cargo.toml  DELTAGATE_BROWSER_ANALYSIS.md  DOC_MERGE_STRATEGY.md  Dockerfile  LICENSE-MIT  LICENSE.md  MEMORY_LEAK_VERIFICATION_DOSSIER.md  MERGE_ANALYSIS.md  MERGE_COMPLETION_REPORT.md  OBSERVABILITY.md  OBSERVABILITY_CHANGES.txt  OBSERVABILITY_INTEGRATION_STATUS.md  OBSERVABILITY_QUICK_START.md  OBSERVABILITY_VERIFICATION.md  OWL_REASONING_BOUNDS_VERIFICATION_DOSSIER.md  (+34 more)
bench/criterion/: Cargo.toml
bench/criterion/benches/: serde_bench.rs
cli/: Cargo.toml  Dockerfile  README.md  build.rs  config.toml  pyproject.toml
cli/examples/: observability_demo.rs
cli/src/: cli.rs  health.rs  main.rs  service_description.rs
cli/templates/: query.html
cli/tests/: observability.rs
fuzz/: Cargo.toml  build_corpus.py
fuzz/fuzz_targets/: jsonld.rs  n3.rs  nquads.rs  rdf_xml.rs  sparql_eval.rs  sparql_query.rs  sparql_query_eval.rs  sparql_results_json.rs  sparql_results_tsv.rs  sparql_results_xml.rs  sparql_update.rs  sparql_update_eval.rs  trig.rs
fuzz/src/: lib.rs  result_format.rs
js/: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  build_package.js  build_package.mjs  build_package.py  package-lock.json  package.json  rome.json  tsconfig.json  vitest.config.mts  vitest.config.ts
js/benches/: bench.mjs
js/examples/: transaction-example.js
js/src/: data_model.js  io.rs  lib.rs  model.rs  reflect.rs  shacl.rs  sparql.rs  store.rs  utils.rs
js/test/: async-io.test.ts  bench_data.ts  interop.test.ts  io.bench.ts  io.test.ts  model.js  model.mjs  model.test.ts  shacl.test.ts  store.bench.ts  store.js  store.mjs  store.test.ts
lib/: Cargo.toml  README.md  build.rs
lib/benches/: sparql_query.rs  store.rs
lib/hdt_driver/: Cargo.toml
lib/hdt_driver/src/: main.rs
lib/oxigraph/: Cargo.toml  README.md
lib/oxigraph/benches/: property_paths.rs  sparqloscope-bsbm-5000.csv  store.rs
lib/oxigraph/examples/: basic_store.rs  determinism_demo.rs  formula_demo.rs  soak.rs  soak_README.md  soak_test.rs  sparql_queries.rs
lib/oxigraph/src/: lib.rs  metrics.rs  model.rs  reasoning.rs  sophia.rs  store.rs  wasm.rs
lib/oxjelly/: Cargo.toml  README.md  build.rs
lib/oxjsonld/: Cargo.toml  README.md
lib/oxowl/: AGENT4_SUMMARY.md  AGENT5_SUMMARY.md  Cargo.toml  N3_PM_VERIFICATION.md  PM_VERIFICATION_STATUS.md  README.md  SERIALIZATION.md
lib/oxrdf/: Cargo.toml  DELTAGATE.md  README.md
lib/oxrdfio/: Cargo.toml  README.md
lib/oxrdfxml/: Cargo.toml  README.md
lib/oxreason/: Cargo.toml  DESIGN.md  README.md  TESTING.md
lib/oxsdatatypes/: Cargo.toml  README.md
lib/oxttl/: Cargo.toml  README.md
lib/sparesults/: Cargo.toml  README.md
lib/spareval/: Cargo.toml  README.md
lib/spareval-fusion/: Cargo.toml
lib/spargebra/: Cargo.toml  README.md
lib/spargeo/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
lib/sparopt/: Cargo.toml  README.md  TESTS_ADDED.md
lib/sparql-smith/: Cargo.toml  README.md
lib/sparshacl/: Cargo.toml  PERFORMANCE_TESTING.md  README.md  VALIDATION_COST_VERIFICATION.md
lib/sparshex/: ADVERSARIAL_TEST_SUMMARY.md  AGENT_3_FINAL_REPORT.md  AGENT_3_SECURITY_AUDIT.md  AGENT_7_REPORT.md  AGENT_9_TEST_REPORT.md  API.md  API_SUMMARY.md  Cargo.toml  INTEGRATION.md  MODEL_DESIGN.md  PERFORMANCE.md  PM_VERIFICATION_AGENT_3.md  README.md  SECURITY.md  SECURITY_VERIFICATION.md  SPEC_COVERAGE.md  TEST_MATRIX.md  WIRING_COMPLETE.md
lib/src/: error.rs  lib.rs  model.rs  repository.rs  rio.rs  sophia.rs  store.rs  syntax.rs  utils.rs
lib/tests/: custom_functions.rs  custom_functions_test_cases.rs  rdf_test_cases.rs  rocksdb_store.rs  service_test_cases.rs  sled_store.rs  sparql_test_cases.rs  store.rs  wasm.rs
oxhdt-sys/: Cargo.toml
oxhdt-sys/src/: lib.rs  main.rs
oxrocksdb-sys/: Cargo.toml  README.md  build.rs  trim_rocksdb.sh
oxrocksdb-sys/api/: build_version.cc  c.cc  c.h
oxrocksdb-sys/src/: lib.rs
python/: .gitignore  Cargo.toml  MANIFEST.in  README.md  base.pyi  generate_stubs.py  generate_type_hints.py  mypy_allowlist.txt  pyoxigraph.pyi  pyproject.toml  requirements.build.txt  requirements.dev.txt  setup.py
python/docs/: conf.py  index.rst  io.rst  migration.rst  model.rst  reasoner.rst  sparql.rst  store.rst
python/pyoxigraph/: __init__.py  models.py  parse.py  serialize.py  sparql.py  store.py
python/rudf/: __init__.py
python/src/: dataset.rs  io.rs  lib.rs  memory_store.rs  model.rs  reasoner.rs  shacl.rs  sled_store.rs  sparql.rs  store.rs  store_utils.rs
python/tests/: data.nq  test_doc.py  test_io.py  test_model.py  test_parse.py  test_reasoner.py  test_serialize.py  test_shacl.py  test_store.py
rocksdb-sys/: Cargo.toml  README.md  build.rs
rocksdb-sys/api/: build_version.cc  c.cc  c.h
rocksdb-sys/src/: lib.rs
server/: Cargo.toml  Dockerfile  README.md  nginx.conf
server/src/: main.rs
server/templates/: query.html
spargebra/: Cargo.toml  README.md
spargebra/src/: algebra.rs  lib.rs  parser.rs  query.rs  term.rs  update.rs
testsuite/: Cargo.toml
testsuite/benches/: parser.rs  sparql_query.rs
testsuite/serd-tests/: LICENSE  README.md
testsuite/src/: canonicalization_evaluator.rs  evaluator.rs  files.rs  lib.rs  main.rs  manifest.rs  parser_evaluator.rs  reasoning_evaluator.rs  report.rs  shacl_evaluator.rs  sparql_evaluator.rs  vocab.rs
testsuite/tests/: canonicalization.rs  exists.rs  oxigraph.rs  parser.rs  serd.rs  sparql.rs
wikibase/: Cargo.toml  Dockerfile  README.md
wikibase/src/: loader.rs  main.rs
(+1175 files in other folders)
