[workspace]
members = [
    "cli",
    "js",
    "lib/oxigraph",
    "lib/oxjsonld",
    "lib/oxowl",
    "lib/oxrdf",
    "lib/oxrdfio",
    "lib/oxrdfxml",
    "lib/oxsdatatypes",
    "lib/oxttl",
    "lib/sparesults",
    "lib/spareval",
    "lib/spargebra",
    "lib/spargeo",
    "lib/sparopt",
    "lib/sparql-smith",
    "lib/sparshacl",
    "lib/sparshex",
    "oxrocksdb-sys",
    "python",
    "testsuite"
]
resolver = "2"

[workspace.package]
version = "0.5.3"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.87"

[workspace.dependencies]
anyhow = "1.0.72"
arbitrary = "1.3"
assert_cmd = "2.0"
assert_fs = "1.0"
bindgen = ">=0.71,<0.73"
bzip2 = ">=0.4, <0.7"
cc = "1.0.73"
clap = "4.0"
clap_complete = "4.0"
clap_mangen = "0.2.19"
codspeed-criterion-compat = ">=2.3.3,<5.0"
console_error_panic_hook = "0.1.7"
csv = "1.3"
dissimilar = "1"
dashmap = ">=5.4, <7.0"
flate2 = "1.0"
geo = ">=0.28, <0.32"  # TODO: upgrade when the dependency on old getrandom will be dropped
geojson = "0.24"
getrandom = "0.3"
hex = "0.4"
js-sys = "0.3.77"
json-event-parser = "0.2.2"
libc = "0.2.155"
md-5 = "0.10"
memchr = "2.5"
oxhttp = "0.3"
oxilangtag = "0.1"
oxiri = "0.2.11"
peg = "0.8"
pkg-config = "0.3.25"
predicates = ">=2.0, <4.0"
pyo3 = "0.27"
quick-xml = "0.37"
rand = "0.9"
rayon = "1.8.1"
rayon-core = "1.12.1"
regex = "1.7"
reqwest = "0.12"
rustc-hash = "2.1"
serde = "1.0.200"
serde_json = "1.0.120"
sha1 = "0.10"
sha2 = "0.10"
siphasher = ">=0.3.10, <2.0"
tempfile = "3.1"
thiserror = ">=1.0.50, <3.0"
time = "0.3"
tokio = "1.29"
url = "2.4"
wasm-bindgen = "0.2.100"
wkt = "0.14"

# Internal dependencies
oxigraph = { version = "=0.5.3", path = "lib/oxigraph" }
oxjsonld = { version = "=0.2.1", path = "lib/oxjsonld" }
oxrdf = { version = "=0.3.1", path = "lib/oxrdf" }
oxrdfio = { version = "=0.2.1", path = "lib/oxrdfio" }
oxrdfxml = { version = "=0.2.1", path = "lib/oxrdfxml" }
oxrocksdb-sys = { version = "=0.5.3", path = "./oxrocksdb-sys" }
oxsdatatypes = { version = "=0.2.2", path = "lib/oxsdatatypes" }
oxttl = { version = "=0.2.1", path = "lib/oxttl" }
spargebra = { version = "=0.4.3", path = "lib/spargebra" }
spargeo = { version = "=0.5.2", path = "lib/spargeo" }
sparesults = { version = "=0.3.1", path = "lib/sparesults" }
sparopt = { version = "=0.3.3", path = "lib/sparopt" }
spareval = { version = "=0.2.3", path = "lib/spareval" }
sparshacl = { version = "=0.1.0", path = "lib/sparshacl" }
sparshex = { version = "=0.1.0", path = "lib/sparshex" }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
# TODO missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
cfg_not_test = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_trait_access = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
doc_link_with_quotes = "warn"
empty_drop = "warn"
empty_enum = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
inline_always = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_include_file = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_fields_in_debug = "warn"
multiple_inherent_impl = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
no_effect_underscore_binding = "warn"
no_mangle_with_rust_abi = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
print_stdout = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
pub_underscore_fields = "warn"
pub_without_shorthand = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
should_panic_without_expect = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_chars_any = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
unchecked_duration_subtraction = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unseparated_literal_suffix = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unwrap_in_result = "warn"
use_debug = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "warn"
zero_sized_map_values = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.oxigraph-js]
opt-level = "z"
