[package]
name = "oxigraph-cli"
version.workspace  = true
authors.workspace  = true
license.workspace  = true
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["command-line-utilities", "database"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/cli"
homepage = "https://oxigraph.org/cli/"
description = """
Oxigraph command line toolkit and SPARQL HTTP server
"""
edition.workspace  = true
rust-version.workspace  = true

[[bin]]
name = "oxigraph"
path = "src/main.rs"

[features]
rocksdb-pkg-config = ["oxigraph/rocksdb-pkg-config"]

[dependencies]
anyhow = "1.0.72"
oxhttp = { version = "0.1.7", features = ["rayon"] }
clap = { version = ">=4.0, <5.0", features = ["derive"] }
oxigraph = { version = "0.4.0-alpha.1-dev", path = "../lib", features = ["http_client"] }
rand = "0.8"
url = "2.4"
oxiri = "0.2"
flate2 = "1.0"
rayon-core = "1.11"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
escargot = "0.5"
predicates = ">=2.0, <4.0"
