[package]
name = "oxigraph-js"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "N-Triples", "Turtle", "XML", "SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/js"
description = "JavaScript bindings of Oxigraph"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "oxigraph"
doc = false

[features]
default = ["geosparql", "rdf-star"]
geosparql = ["dep:spargeo"]
rdf-star = ["oxigraph/rdf-star"]

[dependencies]
console_error_panic_hook.workspace = true
js-sys.workspace = true
oxigraph = { workspace = true, features = ["js"] }
spargeo = { workspace = true, optional = true }
wasm-bindgen.workspace = true

[lints]
workspace = true
