[package]
name = "oxigraph-js"
version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["RDF", "N-Triples", "Turtle", "XML", "SPARQL"]
repository = "https://github.com/oxigraph/oxigraph/tree/main/js"
description = "JavaScript bindings of Oxigraph"
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "oxigraph"
doc = false

[features]
default = ["geosparql", "rdf-12"]
geosparql = ["dep:spargeo"]
rdf-12 = ["oxigraph/rdf-12", "sparshacl/rdf-12"]

[dependencies]
console_error_panic_hook.workspace = true
js-sys.workspace = true
oxigraph = { workspace = true, features = ["js"] }
oxrdf.workspace = true
oxrdfio.workspace = true
spargeo = { workspace = true, optional = true }
sparshacl.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"

[lints]
workspace = true
