[package]
name = "oxhdt-sys"
version = "0.1.0"
edition = "2021"
authors = ["Don Pellegrino <don@decisym.ai>"]
description = """
Rust bindings for HDT for Oxigraph usage.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = { path = "../lib/oxigraph" }
oxigraph-testsuite = { path = "../testsuite" }
