[package]
name = "oxrocksdb-sys"
version = "0.4.0-alpha.2"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "GPL-2.0 OR Apache-2.0"
repository = "https://github.com/oxigraph/oxigraph/tree/main/oxrocksdb-sys"
readme = "README.md"
description = """
Rust bindings for RocksDB for Oxigraph usage.
"""
documentation = "https://docs.rs/oxrocksdb-sys"
edition = "2021"
rust-version = "1.70"
build = "build.rs"
links = "rocksdb"

[features]
pkg-config = ["dep:pkg-config"]

[dependencies]
libc = "0.2.147"

[build-dependencies]
pkg-config = { version = "0.3.25", optional = true }
bindgen = ">=0.60, <0.70"
cc = { version = "1.0.73", features = ["parallel"] }
