[package]
name = "oxrocksdb-sys"
version.workspace = true
authors.workspace = true
license = "GPL-2.0 OR Apache-2.0"
repository = "https://github.com/oxigraph/oxigraph/tree/main/oxrocksdb-sys"
readme = "README.md"
description = "Rust bindings for RocksDB for Oxigraph usage."
documentation = "https://docs.rs/oxrocksdb-sys"
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
links = "rocksdb"

[features]
pkg-config = ["dep:pkg-config"]

[build-dependencies]
bindgen.workspace = true
cc = { workspace = true, features = ["parallel"] }
pkg-config = { workspace = true, optional = true }
