[package]
name = "oxrocksdb-sys_elevont"
version.workspace = true
authors.workspace = true
license = "GPL-2.0 OR Apache-2.0"
repository = "https://github.com/elevont/oxigraph/tree/main/oxrocksdb-sys"
readme = "README.md"
description = "Rust bindings for RocksDB for Oxigraph usage."
documentation = "https://docs.rs/oxrocksdb-sys_elevont"
edition.workspace = true
rust-version.workspace = true
build = "build.rs"
links = "rocksdb"

[features]
pkg-config = ["dep:pkg-config"]

[build-dependencies]
bindgen.workspace = true
cc = { workspace = true, features = ["parallel"] }
pkg-config = { workspace = true, optional = true }
